Fix design problem in Safari for the ‘auth.login’ view
Form was not centered.

--- a/linnote/client/ressources/public/site/css/authentification/master.css
+++ b/linnote/client/ressources/public/site/css/authentification/master.css
@@ -39,9 +39,6 @@ form {
 
     main {
         border-radius: 0.2rem;
-        height: min-content;
-        width: min-content;
-        align-items: center;
     }
 
     form {
